# copper

./: .gitignore  .gitmodules  App.h  CMakeLists.txt  README.md  dwa.copper  fix_integer_range_analysis.patch  imgui.ini  implementations.cpp  main.cpp  main.wgsl
.cache/clangd/index/: Adapter.cpp.787F4E0FB3F2B3B7.idx  Adapter.h.0CEB7EDA4D5DEF3D.idx  Adapter.h.14B918D00F16862D.idx  Alloc.h.0FD73C0179B3326C.idx  Animometer.cpp.33D9F32611447684.idx  ApiObjects.h.4C2030BEF1B0767F.idx  ApplyClearColorValueWithDrawHelper.cpp.C7B3975B7D80A6E5.idx  ApplyClearColorValueWithDrawHelper.h.BF674656F407815C.idx  Assert.h.796D40FB40B65CDE.idx  AttachmentState.h.B53F0FE466BA99D6.idx  BackendConnection.h.B4ECCC154CEB0A0E.idx  BackendVk.cpp.27E7CD7907A7BD3D.idx  BackendVk.h.DAAB6D84CFF3CFCE.idx  BaseTypes.h.18132BCEA65D8A9C.idx  BinarySemaphore.cpp.EAB633297C154962.idx  BinarySemaphore.h.79FCB6BDE78E4259.idx  BindGroup.cpp.0122F71ACE26AD1B.idx  BindGroup.h.52A73E75A37A0BDA.idx  BindGroupGL.h.EE05D4B4A7E6A39F.idx  BindGroupLayout.h.9379105B4589EB7C.idx  BindGroupLayoutGL.h.456A5CDA604DD049.idx  BindGroupLayoutInternal.h.CCAE9DFEC7B27FD1.idx  BindGroupLayoutVk.h.2D22C8E681CD5C6F.idx  BindGroupVk.cpp.E1194E3DF9138E97.idx  BindGroupVk.h.E5CF79FDF11030DB.idx  BindingInfo.h.41B68590897D050F.idx  BindingPoint.h.5E2CB0F926F09C0A.idx  BlitBufferToDepthStencil.h.9517ECB1756726C1.idx  BlitBufferToTexture.h.928C99C1C84BC8D5.idx  BlitColorToColorWithDraw.cpp.3CB08B6E9C8424FB.idx  BlitColorToColorWithDraw.h.484511CDEFD23F10.idx  BlitDepthToDepth.cpp.64D5FC3ED5F82FFE.idx  BlitDepthToDepth.h.DEDDEF53B79FE9E2.idx  BlitTextureToBuffer.h.FA8BC3E2F9999EB1.idx  Blob.h.91CA4F0120D96FF4.idx  BlobCache.cpp.9042150A3414C67A.idx  BlobCache.h.D54A10CF35FB4744.idx  BlobSource.h.DECF6FE3F77706F9.idx  BuddyAllocator.h.A3E1059EE331EA60.idx  BuddyMemoryAllocator.cpp.22EA45EB8927E735.idx  (+1614 more)
run/: CMakeCache.txt  Makefile  cmake_install.cmake
run/glfw/: Makefile  cmake_install.cmake
run/glfw/src/: Makefile  cmake_install.cmake
run/glfw3webgpu/: Makefile  cmake_install.cmake
run/webgpu/: Makefile  cmake_install.cmake
src/: App.cpp  App.h  main.cpp
src/core/: App.cpp  App.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Coder.cpp  Coder.h  Core.cpp  Core.h  GizmoControls.cpp  GizmoControls.h  Renderer.cpp  Renderer.h  coder.cpp  coder.h  core.cpp  core.h  renderer.cpp  renderer.h
src/renderer/: Renderer.cpp  Renderer.h
src/shaders/: shader.wgsl
src/ui/: Interfaz.cpp  Interfaz.h  Window.cpp  Window.h  controls.cpp  controls.h  window.cpp  window.h
src/utils/: wgpu-util.h
